discussion/kv_engine/176957/176957_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46738: Remove any usage of the DcpFlowControlManager base class

Change-Id: I4fb348a135dd48b7291afc6c1a592feafb4ee0cf

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-07-07 09:03:42.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-07 09:45:26.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8493/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8493/ )

Compile error at [2022-07-07T09:44:03.272Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/dcp/flow-control.cc:24:41:
error: no member named "isDcpFlowControlEnabled" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8493/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20708/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20708/ )

Compile error at [2022-07-07T09:44:51.519Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/dcp/flow-control.cc:24:41:
error: ?class Configuration? has no member named ?isDcpFlowControlEnabled?; did you mean ?isDcpConsumerControlEnabled??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20708/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21061/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21061/ )

Compile error at [2022-07-07T09:45:02.705Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/dcp/flow-control.cc:24:41:
error: ?class Configuration? has no member named ?isDcpFlowControlEnabled?; did you mean ?isDcpConsumerControlEnabled??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21061/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29105/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29105/ )

Compile error at [2022-07-07T09:45:11.886Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/dcp/flow-control.cc:24:41:
error: no member named "isDcpFlowControlEnabled" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29105/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47619/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/dcp/flow-control.cc(24): error C2039: "isDcpFlowControlEnabled": is not a member of "Configuration" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47619/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18811/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control.cc:24:41: error: no member named "isDcpFlowControlEnabled" in "Configuration" [clang-diagnostic-error]
      enabled(engine.getConfiguration().isDcpFlowControlEnabled()),
                                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18811/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control.cc:24:41:
error: no member named "isDcpFlowControlEnabled" in "Configuration" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18811/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39997/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/flow-control.cc:24:41:
error: no member named "isDcpFlowControlEnabled" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39997/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19944/ : FAILURE

Compile error at [2022-07-07T09:41:22.193Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/dcp/flow-control.cc:24:41:
error: no member named "isDcpFlowControlEnabled" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19944/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8591/ : FAILURE

Compile error at [2022-07-07T09:10:25.641Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/dcp/flow-control.cc:24:41:
error: ?class Configuration? has no member named ?isDcpFlowControlEnabled?; did you mean ?isDcpConsumerControlEnabled??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8591/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21751/ : FAILURE

Compile error at [2022-07-07T09:44:06.398Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/dcp/flow-control.cc:24:41:
error: no member named "isDcpFlowControlEnabled" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21751/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17968/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
